--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
     <section id="explanation" class="section explanation">
         <div class="content">
-            <h2>Explicação</h2>
+            <h2>Quem somos nós?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at velit convallis, venenatis lacus vel, consequat sapien.</p>
         </div>
     </section>
 
     <section id="about" class="section about">
         <div class="content">
-            <h2>Sobre nós</h2>
+            <h2>O que oferecemos?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempor quam nec sapien tristique, nec congue metus congue.</p>
         </div>
     </section>
