add icone e textos

--- a/index.html
+++ b/index.html
@@ -1,49 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clinia Samia</title>
+    <title>Clínica Mãos que Falam</title>
     <link rel="stylesheet" href="index.css">
+    <head>
+  <!-- Adicione isso no <head> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+</head>
+
 <body>
 
     <header>
         <div class="container">
-            <h1>Site Clinica Super</h1>
+            <h1>Clínica Mãos que Falam</h1>
             <nav>
                 <a href="#introduction">Home</a>
-                <a href="#explanation">Explicação</a>
-                <a href="#about">Sobre Nós</a>
+                <a href="#explanation">Sobre Nós</a>
+                <a href="#about">O que Oferecemos</a>
                 <a href="#footer">Equipe</a>
             </nav>
         </div>
     </header>
 
+    <div class="icone"></div>
+
+
     <section id="introduction" class="section introduction">
         <div class="content">
             <h2>Introdução</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+            <p>Bem-vindo à Clínica Mãos que Falam, um espaço onde a comunicação em libras é prioridade e a inclusão é
+                essencial para garantir um atendimento em saúde digno e acessível à comunidade surda.</p>
         </div>
     </section>
 
     <section id="explanation" class="section explanation">
         <div class="content">
-            <h2>Quem somos nós?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at velit convallis, venenatis lacus vel, consequat sapien.</p>
+            <h2>Sobre Nós</h2>
+            <p>Fundada em 2025, a Mãos que Falam surgiu com o propósito de proporcionar uma experiência única e eficaz
+                para a comunidade surda de Joinville.
+                Sem a necessidade de intérprete, você recebe um atendimento especializado com profissionais treinados e
+                preparados para realizar consultas por meio da comunicação em libras, reduzindo as barreiras de acesso
+                no atendimento à saúde.
+                Desde o início trazemos uma abordagem humanizada, inclusiva e acessível para os pacientes surdos,
+                oferecendo consultas de enfermagem, medicina, nutrição e fisioterapia.
+                Estamos sempre em evolução, buscando o conforto dos pacientes e a capacitação dos profissionais em
+                libras!</p>
+
+            <div class="mvv-container">
+                <div class="mvv-box">
+                    <h3>Missão</h3>
+                    <p>Ser reconhecida como a melhor clínica de atendimento em libras do Brasil.</p>
+                </div>
+                <div class="mvv-box">
+                    <h3>Visão</h3>
+                    <p>Garantir o conforto e a confiança dos pacientes, com um time capacitado e humanizado.</p>
+                </div>
+                <div class="mvv-box">
+                    <h3>Valores</h3>
+                    <p>Empatia, transparência, compromisso, equidade e eficiência.</p>
+                </div>
+            </div>
+
         </div>
     </section>
 
     <section id="about" class="section about">
         <div class="content">
-            <h2>O que oferecemos?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempor quam nec sapien tristique, nec congue metus congue.</p>
+            <h2>O que Oferecemos?</h2>
+            <p>Oferecemos atendimentos em enfermagem, medicina, nutrição e fisioterapia com foco na comunicação em
+                libras, garantindo um ambiente acolhedor, acessível e de qualidade para pacientes surdos.</p>
         </div>
     </section>
 
     <footer id="footer">
         <div class="container">
-            <p>Samia | Samia P. | Samia C.</p>
+            <p>Equipe: Samia | Samia P. | Samia C.</p>
         </div>
     </footer>
 
