ajustes prazo estoutrandoa aaaaaa

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clínica Mãos que Falam</title>
     <link rel="stylesheet" href="index.css">
-    <head>
-  <!-- Adicione isso no <head> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -17,16 +14,16 @@
 
     <header>
         <div class="container">
-            <h1>Clínica Mãos que Falam</h1>
+            <img src="LogoSite.png" alt="Logo Clínica Mãos que Falam" class="logo">
             <nav>
                 <a href="#introduction">Home</a>
                 <a href="#explanation">Sobre Nós</a>
                 <a href="#about">O que Oferecemos</a>
-                <a href="#footer">Equipe</a>
+                <a href="#equipe">Equipe</a>
+                <a href="#contato">Contato</a>
             </nav>
         </div>
     </header>
-
 
     <section id="introduction" class="section introduction">
         <div class="content">
@@ -40,14 +37,12 @@
         <div class="content">
             <h2>Sobre Nós</h2>
             <p>Fundada em 2025, a Mãos que Falam surgiu com o propósito de proporcionar uma experiência única e eficaz
-                para a comunidade surda de Joinville.
-                Sem a necessidade de intérprete, você recebe um atendimento especializado com profissionais treinados e
-                preparados para realizar consultas por meio da comunicação em libras, reduzindo as barreiras de acesso
-                no atendimento à saúde.
-                Desde o início trazemos uma abordagem humanizada, inclusiva e acessível para os pacientes surdos,
-                oferecendo consultas de enfermagem, medicina, nutrição e fisioterapia.
-                Estamos sempre em evolução, buscando o conforto dos pacientes e a capacitação dos profissionais em
-                libras!</p>
+                para a comunidade surda de Joinville. Sem a necessidade de intérprete, você recebe um atendimento
+                especializado com profissionais treinados e preparados para realizar consultas por meio da comunicação
+                em libras, reduzindo as barreiras de acesso no atendimento à saúde. Desde o início trazemos uma
+                abordagem humanizada, inclusiva e acessível para os pacientes surdos, oferecendo consultas de
+                enfermagem, medicina, nutrição e fisioterapia. Estamos sempre em evolução, buscando o conforto dos
+                pacientes e a capacitação dos profissionais em libras!</p>
 
             <div class="mvv-container">
                 <div class="mvv-box">
@@ -64,6 +59,9 @@
                 </div>
             </div>
 
+            <div class="agendar">
+                <button class="agendar-btn">Agende sua consulta</button>
+            </div>
         </div>
     </section>
 
@@ -75,11 +73,71 @@
         </div>
     </section>
 
+    <section id="equipe" class="section explanation">
+        <div class="content">
+            <section class="section equipe">
+                <h2>Nossa Equipe</h2>
+                <div class="equipe-container">
+                    <div class="equipe-membro">
+                        <img src="FotoSamia.jpeg" alt="Sâmia Pietra">
+                        <h3>Sâmia Pietra</h3>
+                    </div>
+                    <div class="equipe-membro">
+                        <img src="FotoAmanda.jpeg" alt="Amanda Carvalho">
+                        <h3>Amanda Carvalho</h3>
+                    </div>
+                    <div class="equipe-membro">
+                        <img src="FotoLarissa.jpeg" alt="Larissa Pereira">
+                        <h3>Larissa Pereira</h3>
+                    </div>
+                </div>
+            </section>
+
+
+            <div class="diferenciais">
+                <h3>Por que escolher a Mãos que Falam?</h3>
+                <p>Oferecemos serviços de saúde únicos, personalizados para pacientes surdos, com profissionais
+                    altamente treinados para atender em libras e ansiosos para ajudar você na recuperação!<br>
+                    Aqui você também ganha acompanhamento pós-tratamento para maior garantia de melhora e conforto!</p>
+            </div>
+        </div>
+    </section>
+    <section class="chegue">
+        <div class="chegue-container">
+            <div class="chegue-texto">
+                <h2>Chegue até nós</h2>
+
+                <h4>Endereço</h4>
+                <p>Rua Calêndula, 193 - Centro, Joinville SC</p>
+
+                <h4>Horário de funcionamento</h4>
+                <p>Segunda a sexta das 07:00 às 17:30</p>
+
+                <p style="margin-top: 10px;"><em>Se apresente na recepção com documento com foto.</em></p>
+            </div>
+
+            <div class="chegue-imagem">
+                <img src="image1.png" alt="Banner da clínica">
+            </div>
+        </div>
+    </section>
+
     <footer id="footer">
         <div class="container">
-            <p>Equipe: Samia | Samia P. | Samia C.</p>
+            
+            <div class="contato">
+                <p><strong>Contato:</strong></p>
+                <p>Email: <a href="mailto:maosquefalam@gmail.com">maosquefalam@gmail.com</a></p>
+                <p>Telefone: <a href="tel:+556789998212">(67) 8999-8212</a></p>
+                <p>
+                    <i class="fab fa-instagram"></i>
+                    <span>@maosquefalam</span>
+                </p>
+            </div>
+            <p><strong>Equipe:</strong> Sâmia Pietra | Amanda Carvalho | Larissa Pereira</p>
         </div>
     </footer>
 
 </body>
+
 </html>
