--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
 
             <div class="chegue-imagem">
-                <img src="image1.png" alt="Banner da clínica">
+                <img src="" alt="Banner da clínica">
             </div>
         </div>
     </section>
